...
                        if (!isFocused) {
                            isFocused = it.isFocused
                        }
                    },
                value = value,
                onValueChange = onValueChange,
                label = "Type your deeplink here...",
                keyboardOptions = KeyboardOptions.Default.copy(
                    keyboardType = KeyboardType.Uri,
                    autoCorrectEnabled = false,
                    imeAction = ImeAction.Done,
                ),
                colors = defaultTextFieldColors.copy(
...
                                contentColor = MaterialTheme.colorScheme.secondary,
                            ),
                            modifier = modifier,
                        ) {
                            Icon(
                                imageVector = TablerIcons.X,
                                contentDescription = "Clear",
                                modifier = Modifier.size(16.dp),
                            )
                        }
                    }
                },
            )
...
                modifier = Modifier.padding(start = 12.dp),
                onClick = launch,
                enabled = value.isNotBlank(),
            ) {
                Icon(
                    imageVector = TablerIcons.ExternalLink,
                    contentDescription = "Launch",
                )
            }
        }

        AnimatedVisibility(
            visible = errorMessage != null,
...
            verticalAlignment = Alignment.CenterVertically,
            horizontalArrangement = Arrangement.SpaceBetween,
        ) {
            Column {
                if (suggestion is Suggestion.Clipboard) {
                    Text(
                        text = "Deeplink from clipboard",
                        style = MaterialTheme.typography.labelSmall.copy(
                            fontWeight = FontWeight.SemiBold,
                            color = MaterialTheme.colorScheme.secondary,
                        ),
                    )
                }
...
