...
                        clipboardManager.setText(AnnotatedString(details.link))
                        onCopy()
                    },
                ) {
                    Icon(
                        painter = painterResource(MR.images.ic_content_copy_24dp),
                        contentDescription = "Copy",
                    )
                }
            }

            Spacer(modifier = Modifier.weight(1f))

...
