...
                    }

                    Spacer(modifier = Modifier.width(4.dp))

                    Icon(
                        imageVector = TablerIcons.Copy,
                        contentDescription = "Copy deep link",
                        tint = DeepLinkTheme.colors.surface.primary,
                        modifier = Modifier.size(24.dp),
                    )
                }

                uiState.deepLink.description?.takeIf { it.isNotBlank() }?.let { descriptionText ->
...
