...
                },
                text = {
                    Text(
                        modifier = Modifier,
                        text = when (it) {
                            HomeTabPage.HISTORY -> "History"
                            HomeTabPage.FAVORITES -> "Favorites"
                            HomeTabPage.FOLDERS -> "Folders"
                        },
                        style = MaterialTheme.typography.bodyLarge.copy(
                            fontWeight = FontWeight.SemiBold,
                        ),
                    )
...
