...
            Icon(
                imageVector = if (isFavorite) {
                    Icons.Rounded.Favorite
                } else {
                    Icons.Rounded.FavoriteBorder
                },
                contentDescription = "Favorite",
                tint = if (isFavorite) {
                    Color(0xFFE57373)
                } else {
                    MaterialTheme.colorScheme.onSurface
                },
            )
...
